Done JS Function

--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
     <div class="start-menu__choices">
       <button class="start-menu__button start-menu__button--html">
         <div class="start-menu__icon-container">
-          <img src="./assets/images/icon-html.svg" alt="HTML Icon" />
+          <img src="./assets/images/icon-html.svg" alt="HTML Icon" style="background-color: #FFF1E9;"/>
         </div>
         HTML
       </button>
       <button class="start-menu__button start-menu__button--css">
         <div class="start-menu__icon-container">
-          <img src="./assets/images/icon-css.svg" alt="CSS Icon" />
+          <img src="./assets/images/icon-css.svg" alt="CSS Icon" style="background-color: #E0FDEF;"/>
         </div>
         CSS
       </button>
       <button class="start-menu__button start-menu__button--js">
         <div class="start-menu__icon-container">
-          <img src="./assets/images/icon-js.svg" alt="JavaScript Icon" />
+          <img src="./assets/images/icon-js.svg" alt="JavaScript Icon" style="background-color: #EBF0FF;"/>
         </div>
         JavaScript
       </button>
       <button class="start-menu__button start-menu__button--accessibility">
         <div class="start-menu__icon-container">
-          <img src="./assets/images/icon-accessibility.svg" alt="Accessibility Icon" />
+          <img src="./assets/images/icon-accessibility.svg" alt="Accessibility Icon" style="background-color: #F6E7FF;"/>
         </div>
-         
+        Accessibility
       </button>
     </div>
   </section>
